Change application id

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.tableapplication"
+        applicationId "com.demonstration.table"
         minSdk 23
         targetSdk 33
         versionCode 1
