--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,8 @@ include ':modules:celebrity:core_factory'
 include ':modules:celebrity:core_api'
 include ':modules:base:base_table'
 include ':modules:base:base_ui'
-include ':modules:features:feature_register'
 include ':modules:features:feature_container'
 include ':modules:features:feature_components'
 include ':modules:features:feature_componentsapi'
+include ':modules:features:feature_registration'
+include ':modules:features:feature_registrationapi'
