--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,5 @@ include ':modules:features:feature_components'
 include ':modules:features:feature_componentsapi'
 include ':modules:features:feature_registration'
 include ':modules:features:feature_registrationapi'
+include ':modules:features:feature_greeting'
+include ':modules:features:feature_greetingapi'
