--- a/modules/celebrity/core_impl/build.gradle
+++ b/modules/celebrity/core_impl/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     implementation libs.dagger.core
     kapt libs.dagger.compiler
+    implementation libs.bundles.navigation
 
     api project(":modules:celebrity:core_api")
 }
