--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 
     implementation libs.dagger.core
     kapt libs.dagger.compiler
-
+    implementation libs.bundles.navigation
 
     implementation project(":modules:celebrity:core_factory")
     implementation project(":modules:celebrity:core_api")
@@ -56,4 +56,6 @@ dependencies {
     implementation project(":modules:features:feature_registrationapi")
     implementation project(":modules:features:feature_greeting")
     implementation project(":modules:features:feature_greetingapi")
+    implementation project(":modules:features:feature_signin")
+    implementation project(":modules:features:feature_signinapi")
 }
