--- a/modules/celebrity/core_api/build.gradle
+++ b/modules/celebrity/core_api/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation(libs.dagger.core)
+    implementation libs.dagger.core
     kapt libs.dagger.compiler
+    implementation libs.bundles.navigation
 }
