--- a/modules/features/feature_components/build.gradle
+++ b/modules/features/feature_components/build.gradle
@@ -29,15 +29,11 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        viewBinding = true
     }
 }
 
 dependencies {
-
-    implementation project(":modules:celebrity:core_api")
-    implementation project(":modules:base:base_ui")
-    implementation project(":modules:features:feature_componentsapi")
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -51,4 +47,10 @@ dependencies {
 
     implementation libs.dagger.core
     kapt libs.dagger.compiler
+    implementation libs.bundles.navigation
+
+    implementation project(":modules:celebrity:core_api")
+    implementation project(":modules:base:base_ui")
+    implementation project(":modules:base:base_table")
+    implementation project(":modules:features:feature_componentsapi")
 }
