--- a/modules/features/feature_greetingapi/build.gradle
+++ b/modules/features/feature_greetingapi/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation libs.bundles.navigation
+
     implementation project(":modules:celebrity:core_api")
 }
