--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,5 @@ include ':modules:features:feature_registration'
 include ':modules:features:feature_registrationapi'
 include ':modules:features:feature_greeting'
 include ':modules:features:feature_greetingapi'
+include ':modules:features:feature_signin'
+include ':modules:features:feature_signinapi'
