--- a/modules/features/feature_signin/build.gradle
+++ b/modules/features/feature_signin/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation project(":modules:celebrity:core_api")
     implementation project(":modules:base:base_ui")
     implementation project(":modules:base:base_table")
+    implementation project(":modules:features:feature_greetingapi")
     implementation project(":modules:features:feature_registrationapi")
     implementation project(":modules:features:feature_signinapi")
 }
