--- a/modules/features/feature_home/build.gradle
+++ b/modules/features/feature_home/build.gradle
@@ -1,20 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
+    namespace 'com.demonstration.featurehome'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.demonstration.table"
         minSdk 23
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -30,13 +29,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -45,18 +50,6 @@ dependencies {
     kapt libs.dagger.compiler
     implementation libs.bundles.navigation
 
-    implementation project(":modules:celebrity:core_factory")
-    implementation project(":modules:celebrity:core_api")
-    implementation project(":modules:base:base_ui")
     implementation project(":modules:base:base_table")
-    implementation project(":modules:features:feature_container")
-    implementation project(":modules:features:feature_components")
-    implementation project(":modules:features:feature_componentsapi")
-    implementation project(":modules:features:feature_registration")
-    implementation project(":modules:features:feature_registrationapi")
-    implementation project(":modules:features:feature_greeting")
-    implementation project(":modules:features:feature_greetingapi")
-    implementation project(":modules:features:feature_signin")
-    implementation project(":modules:features:feature_signinapi")
-    implementation project(":modules:features:feature_home")
+    implementation project(":modules:base:base_ui")
 }
