--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':modules:features:feature_greeting'
 include ':modules:features:feature_greetingapi'
 include ':modules:features:feature_signin'
 include ':modules:features:feature_signinapi'
+include ':modules:features:feature_home'
