--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':modules:features:feature_greetingapi'
 include ':modules:features:feature_signin'
 include ':modules:features:feature_signinapi'
 include ':modules:features:feature_home'
+include ':modules:features:feature_settings'
