--- a/settings.gradle
+++ b/settings.gradle
@@ -31,4 +31,8 @@ include ':modules:features:feature_greetingapi'
 include ':modules:features:feature_signin'
 include ':modules:features:feature_signinapi'
 include ':modules:features:feature_home'
+include ':modules:features:feature_homeapi'
 include ':modules:features:feature_settings'
+include ':modules:features:feature_settingsapi'
+include ':modules:features:feature_booking'
+include ':modules:features:feature_bookingapi'
