--- a/modules/features/feature_signin/build.gradle
+++ b/modules/features/feature_signin/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation project(":modules:features:feature_greetingapi")
     implementation project(":modules:features:feature_registrationapi")
     implementation project(":modules:features:feature_signinapi")
+    implementation project(":modules:features:feature_homeapi")
 }
