--- a/modules/base/base_table/build.gradle
+++ b/modules/base/base_table/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation project(":modules:celebrity:core_api")
+    implementation project(":modules:base:base_ui")
 }
