Add fix for bottom navigation, added date & time pickers, add threetenabp

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.demonstration.table"
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -44,6 +44,7 @@ dependencies {
     implementation libs.dagger.core
     kapt libs.dagger.compiler
     implementation libs.bundles.navigation
+    implementation libs.date
 
     implementation project(":modules:celebrity:core_factory")
     implementation project(":modules:celebrity:core_api")
