Add WorkspaceSelectionView.kt, did fixes with package naming

--- a/modules/features/feature_settings/build.gradle
+++ b/modules/features/feature_settings/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.demonstrations.table.featuresettings'
+    namespace 'com.demonstration.table.featuresettings'
     compileSdk 33
 
     defaultConfig {
